@@ -4,6 +4,7 @@ package dev.dubhe.anvilcraft.event;
 import dev.dubhe.anvilcraft.AnvilCraft;
 import dev.dubhe.anvilcraft.api.event.FallingBlockCollisionEvent;
 import dev.dubhe.anvilcraft.block.multipart.AbstractMultiPartBlock;
+import dev.dubhe.anvilcraft.init.ModBlockTags;
 import dev.dubhe.anvilcraft.init.ModRecipeTypes;
 import dev.dubhe.anvilcraft.recipe.anvil.collision.AnvilCollisionCraftRecipe;
 import dev.dubhe.anvilcraft.recipe.elements.OutputItem;
@@ -155,7 +156,16 @@ public class FallingBlockCollisionEventListener {
             for (int i = 0; i < number; i++) {
                 Vec3 deltaMovementVec3 = new Vec3(deltaMovement);
                 Vec3 itemPos = originItemPos.add(deltaMovementVec3.scale(0.2));
-                ItemEntity itemEntity = new ItemEntity(level, itemPos.x, itemPos.y, itemPos.z, new ItemStack(itemStack.getItem(), quotient + Math.max(Math.min(1, remainder), 0)));
+                ItemEntity itemEntity = new ItemEntity(
+                        level,
+                        itemPos.x,
+                        itemPos.y,
+                        itemPos.z,
+                        new ItemStack(
+                                itemStack.getItem(),
+                                quotient + Math.clamp(remainder, 0, 1)
+                        )
+                );
                 deltaMovement.rotateAxis(dRoute, (float) normal.x, (float) normal.y, (float) normal.z);
                 itemEntity.setDeltaMovement(new Vec3(deltaMovement));
                 MergeCooldownItemEntity.castFromItemEntity(itemEntity).setMergeCooldown(5);
